Add demo of EmptyView

--- a/TeamBuilderDemo/TeamBuilderDemo.UWP/TeamBuilderDemo.UWP.csproj
+++ b/TeamBuilderDemo/TeamBuilderDemo.UWP/TeamBuilderDemo.UWP.csproj
@@ -146,8 +146,10 @@
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle">
       <Version>3.0.0.5</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.1" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.7" />
+    <PackageReference Include="Xamarin.Forms">
+      <Version>4.0.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DotNetConfDemo\TeamBuilderDemo.csproj">
