--- a/TeamBuilderDemo/TeamBuilderDemo.iOS/TeamBuilderDemo.iOS.csproj
+++ b/TeamBuilderDemo/TeamBuilderDemo.iOS/TeamBuilderDemo.iOS.csproj
@@ -151,7 +151,9 @@
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle">
       <Version>3.0.0.5</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.1" />
+    <PackageReference Include="Xamarin.Forms">
+      <Version>4.0.1</Version>
+    </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
